<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvNombreMAIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="52dp"
        android:text="@string/txt_tvNombreMAIN"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etNombreMAIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvNombreMAIN"
        android:layout_toEndOf="@+id/tvNombreMAIN"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvTipoMAIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvNombreMAIN"
        android:layout_alignParentTop="true"
        android:layout_marginTop="127dp"
        android:text="@string/txt_tvTipoMAIN"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etTipoMAIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvTipoMAIN"
        android:layout_toEndOf="@+id/tvTipoMAIN"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvOrigenMAIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvNombreMAIN"
        android:layout_alignParentTop="true"
        android:layout_marginTop="211dp"
        android:text="@string/txt_tvOrigenMAIN"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etOrigenMAIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvOrigenMAIN"
        android:layout_toEndOf="@+id/tvOrigenMAIN"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvNutrientesMAIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvNombreMAIN"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="194dp"
        android:text="@string/txt_tvNutrientesMAIN"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etNutrientesMAIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvNutrientesMAIN"
        android:layout_toEndOf="@+id/tvNutrientesMAIN"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvFuncionMAIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvNombreMAIN"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="136dp"
        android:text="@string/txt_tvFuncionMAIN"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etFuncionMAIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvFuncionMAIN"
        android:layout_toEndOf="@+id/tvNombreMAIN"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="374dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegistrarMAIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="c_btnRegistrarMAIN"
            android:text="@string/txt_btnRegistrarMAIN" />

        <Button
            android:id="@+id/btnLimpiarMAIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="c_btnLimpiarMAIN"
            android:text="@string/txt_btnLimpiarMAIN" />

        <Button
            android:id="@+id/btnConsultarMAIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="c_btnConsultarMAIN"
            android:text="@string/txt_btnConsultarMAIN" />
    </LinearLayout>
</RelativeLayout>